logs/leadershipintwodayslaunchd.err
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
  File "/Users/stu/git/tripschedule/leadershipintwodays.py", line 188
    elif:
        ^
SyntaxError: invalid syntax
